syntax = "proto3";

package yandex.cloud.iam.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/iam/v1;iam";
option java_package = "yandex.cloud.api.iam.v1";

// A ServiceAccount resource. For more information, see [Service accounts](/docs/iam/concepts/users/service-accounts).
message ServiceAccount {
  // ID of the service account.
  string id = 1;

  // ID of the folder that the service account belongs to.
  string folder_id = 2;

  // Creation timestamp.
  google.protobuf.Timestamp created_at = 3;

  // Name of the service account.
  // The name is unique within the cloud. 3-63 characters long.
  string name = 4;

  // Description of the service account. 0-256 characters long.
  string description = 5;

  // Resource labels as `` key:value `` pairs. Maximum of 64 per resource.
  map<string, string> labels = 6;

  // Timestamp for the last authentication of this service account.
  google.protobuf.Timestamp last_authenticated_at = 7;
}
