syntax = "proto3";

package yandex.cloud.iam.v1.workload;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/iam/v1/workload;workload";
option java_package = "yandex.cloud.api.iam.v1.workload";

// A federated credential.
message FederatedCredential {

  // Id of the federated credential.
  string id = 1;

  // Id of the service account that the federated credential belongs to.
  string service_account_id = 2;

  // ID of the workload identity federation which is used for authentication.
  string federation_id = 3;

  // Id of the external subject.
  string external_subject_id = 4;

  // Creation timestamp.
  google.protobuf.Timestamp created_at = 5;
}
