syntax = "proto3";

package yandex.cloud.k8s.v1;

import "yandex/cloud/validation.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/k8s/v1;k8s";
option java_package = "yandex.cloud.api.k8s.v1";

message VersionInfo {
  // Current Kubernetes version, format: major.minor (e.g. 1.15).
  string current_version = 1;

  // Newer revisions may include Kubernetes patches (e.g 1.15.1 -> 1.15.2) as well
  // as some internal component updates - new features or bug fixes in platform specific
  // components either on the master or nodes.
  bool new_revision_available = 2;

  // Description of the changes to be applied when updating to the latest
  // revision. Empty if new_revision_available is false.
  string new_revision_summary = 3;

  // The current version is on the deprecation schedule, component (master or node group)
  // should be upgraded.
  bool version_deprecated = 4;
}

message UpdateVersionSpec {
  oneof specifier {
    option (exactly_one) = true;
    // Request update to a newer version of Kubernetes (1.x -> 1.y).
    string version = 1;
    // Request update to the latest revision for the current version.
    bool latest_revision = 2;
  }
}
